projet_gl/src/test/deca/syntax/invalid/print/incorrectPrint.deca
// Description:
//    invalid test parser for print.
//
// Resultats:
//    ligne 12 : missing ';' at '}'.
//
// Historique:
//    cree le 12/01/2024

{
    print(1)
}